# Nyxora

./: .gitattributes  .gitignore  .gitleaks.toml  .grype.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  add_cov.py  nyxora_windows.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  sbom-scan.yml  secret-scanning.yml
assets/: demo.tape  demo_seed.sh
docs/: ARCHITECTURE.md  CLI_UX_SPEC.md  RECOVERY.md  SECURITY.md  help_output_report.md
sbom/: nyxora-sbom.cdx.json
scripts/: capture_help_outputs.py
scripts_build/: build_windows.py
src/nyxora/: __init__.py  sdk.py
src/nyxora/cli/: __init__.py  helpers.py  main.py  ui.py
src/nyxora/cli/commands/: __init__.py  backup.py  generate.py  import_.py  locker.py  recovery.py  scripting.py  secret.py  security.py  tui_cmd.py  update.py  vault.py
src/nyxora/core/: __init__.py  crypto_engine.py  intel_engine.py  memory_guard.py  recovery_core.py  session_core.py  update_engine.py  vault_store.py
src/nyxora/tui/: __init__.py  _markup.py  app.py  launcher.py  theme.tcss
src/nyxora/tui/screens/: _shared_bg.py  add_entry.py  audit_screen.py  backup.py  edit_entry.py  generate.py  manage.py  recovery.py  search_overlay.py  security.py  totp_qr_overlay.py  unlock.py  updates.py  vault.py  vault_browser.py
src/nyxora/utils/: __init__.py  config.py  exceptions.py  paths.py
tests/: conftest.py
tests/integration/: test_brute_force_lockout.py  test_copy_user_url.py  test_corner_contrast.py  test_density_layout.py  test_full_workflow.py  test_generate_layout.py  test_manage_button_states.py  test_nyxora_home.py  test_short_viewport_layout.py  test_tamper_detection.py  test_tui_9block.py  test_updates_boxes.py  test_updates_version_box.py  test_v2_features.py
tests/unit/: test_cli_commands.py  test_cli_help.py  test_cli_helpers.py  test_config.py  test_crypto_engine.py  test_direct_coverage.py  test_generate_behavior.py  test_intel_engine.py  test_interactive_mocks.py  test_launcher.py  test_locker_behavior.py  test_main_and_vault.py  test_massive_coverage.py  test_memory_guard.py  test_recovery_core.py  test_sdk.py  test_session_core.py  test_tui.py  test_ui_components.py  test_update_engine.py  test_vault_store.py
