[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyxora"
version = "3.0.0"
description = "Terminal-native, offline, zero-knowledge, quantum-resilient password intelligence vault"
readme = "README.md"
authors = [
  { name = "ScorpioCodeX", email = "scorpiocodex0@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["password-manager", "security", "cryptography", "cli", "vault"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "PyNaCl>=1.5.0",
    "orjson>=3.9.0",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pyperclip>=1.8.0",
    "keyring>=24.0.0",
    "textual>=0.47.0",
    "packaging>=23.0",
    "qrcode>=7.4.2",
]

[project.urls]
Homepage = "https://github.com/scorpiocodex/Nyxora"
Documentation = "https://github.com/scorpiocodex/Nyxora/blob/main/README.md"
Repository = "https://github.com/scorpiocodex/Nyxora.git"
Tracker = "https://github.com/scorpiocodex/Nyxora/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "responses>=0.25.0",
    "freezegun>=1.4.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.scripts]
nyx = "nyxora.cli.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/nyxora"]
include = ["src/nyxora/data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/nyxora --cov-report=term-missing --cov-fail-under=80"
timeout = 60

[tool.coverage.run]
source = ["src/nyxora"]
omit = ["*/tests/*", "*/__init__.py", "*/tui/*"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
